Package: startup
================

Version: 0.16.0-9007 [2022-02-15]

NEW FEATURES:

 * Add on_session_enter() for registering R functions and expressions to be
   evaluated at the end of R's startup process via a custom .First() that is
   added to the global environment.  If there is a .First() function on the
   search path, including any preexisting one in the global environment, that
   is called at the end.

 * Add on_session_exit() for registering R functions and expressions to be
   called at the very end when the R session terminates.

 * Now startup() warns about non-standard, platform-specific capitalization of
   Renviron and Rprofile file names.  For example, although ~/.RProfile works
   on MS Windows and macOS with non-case sensitive file systems, the officially
   supported file name is ~/.Rprofile.

 * Now startup(debug = TRUE) reports on '.Last()' and '.Last.sys()'.

 * Harmonized cache folder options toward tools::R_user_dir() of R (>= 4.0.0).

BUG FIXES:

 * startup(unload = TRUE) failed when there was an .RData file and environment
   variable 'R_STARTUP_RDATA' or R option 'startup.rdata' specifies "prompt".



Version: 0.16.0 [2021-11-19]

NEW FEATURES:

 * Now startup(debug = TRUE) reports on 'R_SCRIPT_DEFAULT_PACKAGES'.

 * Now startup(debug = TRUE) reports on tempdir() and environment variables
   'TMPDIR', 'TMP', and 'TEMP' that controls the root of the temporary folder.

 * Now it is sufficient to call startup(dryrun = TRUE) to see what the R
   startup would have been.  Previously one would also have to specify
   debug = TRUE.

 * Now startup(debug = TRUE) reports on packages loaded, attached, unloaded,
   and detached per Rprofile file processed.  It also reports on other
   environments attached and detached.

 * Now startup(debug = TRUE) reports also on the Rprofile file in the 'base'
   package, i.e. system.file("R", "Rprofile", package = "base").

 * startup::startup(check = TRUE) no longer warns if environment variables