@@ -5,6 +5,14 @@ Version: 0.16.0-9007 [2022-02-15]
 
 NEW FEATURES:
 
+ * startup::startup() now searches for Renviron.d/ and Rprofile.d/ (note,
+   with leading periods) in user's configuration folder in a way that is
+   compatible with tools::R_user_dir() of R (>= 4.0.0) and that follows
+   operating-system standards. For example, for Linux ~/.config/R/startup/,
+   for macOS ~/Library/Preferences/org.R-project.R/R/startup/, and for
+   MS Windows %LOCALAPPDATA%/R/cache/R/startup/. If environment variable
+   'XDG_CONFIG_HOME' is set, then ${XDG_CONFIG_HOME}/R/startup/ is used.
+
  * Add on_session_enter() for registering R functions and expressions to be
    evaluated at the end of R's startup process via a custom .First() that is
    added to the global environment.  If there is a .First() function on the
